feat: black list